tests/NormalTests/paczka1/fuzzy1/27266301.err
Error in line 1: PXPx6Aw A849 9,9
Error in line 6: PiNu5L55b S612 57,1
Error in line 17: 3Qt2EgVLKU A9 36,3
Error in line 15: PXPx6Aw A9 187,5
Error in line 21: 3Qt2EgVLKU A849 31,1
Error in line 16: A849 S612 222,6
Error in line 29: F44 A849 55,0
Error in line 22: PXPx6Aw S612 82,8
